--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
 
     async function fetchLogs() {
       try {
-        const res = await fetch("http://localhost:8000/api/logs");
+        const res = await fetch("https://YOUR_ACTUAL_RAILWAY_URL.up.railway.app/api/logs");
         const data = await res.json();
         if (!data.logs || data.logs.length === 0) {
           logsDiv.innerHTML = "No logs available yet.";
@@ -72,7 +72,7 @@
 
     async function fetchSummary() {
       try {
-        const res = await fetch("http://localhost:8000/api/summary");
+        const res = await fetch("https://YOUR_ACTUAL_RAILWAY_URL.up.railway.app/api/summary");
         const data = await res.json();
         summaryDiv.innerText = data.summary || "No summary available yet.";
       } catch (err) {
@@ -85,7 +85,7 @@
       const question = document.getElementById("ai-question").value;
       if (!question) return;
       try {
-        const res = await fetch(`http://localhost:8000/api/ask?question=${encodeURIComponent(question)}`);
+        const res = await fetch(`https://YOUR_ACTUAL_RAILWAY_URL.up.railway.app/api/ask?question=${encodeURIComponent(question)}`);
         const data = await res.json();
         aiAnswerDiv.innerText = data.answer || "No answer yet.";
       } catch (err) {
